@@ -12,3 +12,8 @@ r4 (0.3):
 	* Ahora se muestra un menú para escoger los elementos a instalar
 	* Ahora cada instalador esta en un función aparte para una mayor claridad del código
 	* También comprueba si esta instalado lo necesario para instalar las aplicaciones
+
+r5 (0.4):
+	* Añadidos Beepola y BeepFX
+	* Corregidas las urls en churrera_retriever por cambio de carpeta donde se encuentra el paquete con la Churrera
+	* Ahora si se escoge la opción 0 y una o mas opciones se ejecuta la instalación de todo y se cierra sin ejecutar las demás opciones
